--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ML Challenge Android</string>
+
+    <string name="search_on_meli">Buscar no Mercado Livre</string>
 </resources>
