--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ML Challenge Android</string>
 
     <string name="search_on_meli">Buscar no Mercado Livre</string>
+    <string name="search_not_started">Utilize o campo de pesquisa acima para fazer suas buscas</string>
 </resources>
