feat: adjust error feedback for the user and finish state handle method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="search_on_meli">Buscar no Mercado Livre</string>
     <string name="search_not_started">Utilize o campo de pesquisa acima para fazer suas buscas</string>
+    <string name="search_empty">Sua busca não retornou resultados</string>
+    <string name="search_error">Aconteceu um erro ao realizar sua busca. (Código de erro: %d)</string>
 </resources>
