--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <!-- Item -->
     <string name="free_shipping">Frete grátis</string>
+
+    <!-- Item Detail -->
+    <string name="item_detail_title">Detalhes do produto</string>
 </resources>
