wip: implementing specification recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
 
     <!-- Item Detail -->
     <string name="item_detail_title">Detalhes do produto</string>
+    <string name="item_specification">Características do produto</string>
+    <string name="item_all_specification">Conferir todas as características</string>
+    <string name="item_description">Descrição</string>
 </resources>
