--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="item_specification">Características do produto</string>
     <string name="item_all_specification">Conferir todas as características</string>
     <string name="item_description">Descrição</string>
+
+    <!-- User Error -->
+    <string name="item_detail_error">Houve um erro ao carregar todas as informações do produto</string>
 </resources>
